add endpoint get user by id
