# src/routes/userRoute.js
@@ -3,6 +3,7 @@ import {
   register,
   login,
   getUserAll,
+  getUserById,
   getUser,
 } from "../controllers/userController.js";
 import { authenticate } from "../middlewares/authMiddleware.js";
@@ -12,6 +13,7 @@ const router = express.Router();
 router.post("/register", register);
 router.post("/login", login);
 router.get("/all", getUserAll);
+router.get("/by-id/:id", getUserById);
 router.get("/", authenticate, getUser);
 
 export default router;
